flugbuch2 (2.0.15~natty) natty; urgency=low

  * build for natty
  * using app-root wt fcgi configuration

 -- Richard Ulrich <richi@paraeasy.ch>  Thu,  8 Jun 2011 18:40:10 +0200

flugbuch2 (2.0.14~maverick) maverick; urgency=low

  * build for maverick

 -- Richard Ulrich <richi@paraeasy.ch>  Thu,  17 Okt 2010 11:40:10 +0200

flugbuch2 (2.0.14) lucid; urgency=low

  * fixed the hanging debian/postinst that troubled a while. I found the solution in the postinst script of the gallery package of which I found a mailing list that indicated that they used to have the same problem.

 -- Richard Ulrich <richi@paraeasy.ch>  Thu,  05 Aug 2010 01:15:10 +0200

flugbuch2 (2.0.13) lucid; urgency=low

  * trying "invoke-rc.d apache2 restart || true" in debian/postinst hoping that it won't hang.

 -- Richard Ulrich <richi@paraeasy.ch>  Wed,  04 Aug 2010 00:07:10 +0200

flugbuch2 (2.0.12) lucid; urgency=low

  * resolved compiler error with ambiguity between the _1 placeholder of boost::bind and boost::lambda::bind with 64 bit compilation. For some reason, the old trick to explicitly specify either bll::_1 or ::_1  didn't work on amd64.

 -- Richard Ulrich <richi@paraeasy.ch>  Thu,  01 Aug 2010 21:54:10 +0200

flugbuch2 (2.0.11) lucid; urgency=low

  * Moved the debian directory from inst/ to the project root. The source tarball resulting from "dpkg-buildpackage -rfakeroot -S" contained only the inst subdir.

 -- Richard Ulrich <richi@paraeasy.ch>  Thu,  01 Aug 2010 14:02:17 +0200

flugbuch2 (2.0.10) lucid; urgency=low

  * added cmake dependency in debian/control

 -- Richard Ulrich <richi@paraeasy.ch>  Thu, 30 Jul 2010 22:18:17 +0200

flugbuch2 (2.0.9) lucid; urgency=low

  * changed distro release

 -- Richard Ulrich <richi@paraeasy.ch>  Thu, 30 Jul 2010 22:18:17 +0200

flugbuch2 (2.0.8) lucid; urgency=low

  * moved from alpha to beta

 -- Richard Ulrich <richi@paraeasy.ch>  Thu, 24 Sep 2009 20:18:17 +0200

flugbuch2 (2.0.5) lucid; urgency=low

  * better statistics