@@ -4,7 +4,7 @@
 // flugbuch
 #include "GenGeomLibSerialize.h"
 // ggl (boost sandbox)
-#include <geometry/geometries/latlong.hpp>
+#include <boost/geometry/extensions/gis/latlong/latlong.hpp>
 // boost
 #include <boost/date_time/gregorian/gregorian_types.hpp>
 #include <boost/date_time/posix_time/posix_time_types.hpp>
@@ -62,8 +62,9 @@ BOOST_SERIALIZATION_SHARED_PTR(FlightArea);
 class Location
 {
 	friend class boost::serialization::access;
+	typedef boost::geometry::model::ll::point<> point_ll_deg;
 public:
-	Location(boost::shared_ptr<FlightArea> area, const std::string &name, unsigned short height, const geometry::point_ll_deg &pos, int usage)
+	Location(boost::shared_ptr<FlightArea> area, const std::string &name, unsigned short height, const point_ll_deg &pos, int usage)
 	 : area_(area), name_(name), height_(height), pos_(pos), usageas_(usage) {}
 	Location(const Location &cpy) :  name_(cpy.name_), height_(cpy.height_), pos_(cpy.pos_), usageas_(cpy.usageas_) {}
     ~Location() {};
@@ -73,7 +74,7 @@ public:
 	const boost::shared_ptr<FlightArea> area() const { return area_; }
 	const std::string            & name()      const { return name_; }
 	unsigned short                 height()    const { return height_; }
-    const geometry::point_ll_deg & pos()       const { return pos_; }
+    const point_ll_deg &           pos()       const { return pos_; }
 	int                            usage()     const { return usageas_; }
 	std::string                    identity()  const { return area_->name() + " " + name_; }
 
@@ -81,12 +82,12 @@ public:
 	void setArea(boost::shared_ptr<FlightArea> flar)    { area_     = flar; }
 	void setName(const std::string &nam)                { name_     = nam; }
 	void setHeight(unsigned short height);
-	void setPosition(const geometry::point_ll_deg &pos) { pos_      = pos; }
+	void setPosition(const point_ll_deg &pos)           { pos_      = pos; }
 	void setUsage(int usg)                              { usageas_  = usg; }
 	void addUsage(int usg)                              { usageas_ |= usg; }
 
 	// calculation
-	double getDistance(const geometry::point_ll_deg &otherpos) const;
+	double getDistance(const point_ll_deg &otherpos) const;
 	bool   isEquivalent(const Location &rhs) const;
 
 	template<class Archive> void serialize(Archive & ar, const unsigned int version)
@@ -112,7 +113,7 @@ private:
 	boost::shared_ptr<FlightArea>  	area_;
 	std::string 					name_;
 	unsigned short					height_;
-	geometry::point_ll_deg          pos_;
+	point_ll_deg                    pos_;
 	int         					usageas_;
 };
 BOOST_SERIALIZATION_SHARED_PTR(Location);
